Limpieza de datos

--- a/RC-anual2018.ipynb
+++ b/RC-anual2018.ipynb
@@ -5,12 +5,19 @@
    "metadata": {},
    "source": [
     "# Red de empresas\n",
-    "__Queletzu y Mariana__\n",
+    "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
+    "\n",
+    "\n",
     "\n",
     "Existen dos tipos de empresas:\n",
     "\n",
     "* Las “puede con todas” que tienen contratos con muchas dependencias por “licitación abierta”. Las “puede con todas” son expertas en licitaciones, pueden facturar muchos contratos de gran monto.\n",
+    "\n",
+    "<img src=\"figures/RC-puedecontodas.png\">\n",
+    "\n",
     "* Las “favoritas” que tienen contratos con menos de tres dependencias por “adjudicación directa” o “invitación a tres” Las “favoritas” pueden facturar relativamente poco dinero (menos de 10 millones) pero son sospechosas de tráfico de influencias con una entidad en particular\n",
+    "\n",
+    "<img src=\"figures/RC-lafavorita.png\">\n",
     "\n",
     "¿Cómo las encontramos?\n"
    ]
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +110,12 @@
      "output_type": "stream",
      "text": [
       "(180016, 6)\n",
-      "Index(['empresa', 'uc', 'dependencia', 'method', 'monto', 'servicio'], dtype='object')\n",
-      "empresa         object\n",
-      "uc              object\n",
-      "dependencia     object\n",
-      "method          object\n",
-      "monto          float64\n",
-      "servicio        object\n",
-      "dtype: object\n"
+      "depend\tobject\t1574\t1469\n",
+      "unidad\tobject\t2263\t1978\n",
+      "empres\tobject\t72147\t62745\n",
+      "tipo\tobject\t3\t3\n",
+      "monto\tfloat64\t125206\t125206\n",
+      "servic\tobject\t5\t5\n"
      ]
     },
     {
@@ -134,12 +139,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>institucion</th>\n",
+       "      <th>depend</th>\n",
        "      <th>unidad</th>\n",
-       "      <th>empresa</th>\n",
+       "      <th>empres</th>\n",
        "      <th>tipo</th>\n",
        "      <th>monto</th>\n",
-       "      <th>servicio</th>\n",
+       "      <th>servic</th>\n",
        "      <th>direct</th>\n",
        "      <th>open</th>\n",
        "      <th>limited</th>\n",
@@ -151,10 +156,10 @@
        "      <td>Exportadora De Sal SA De CV</td>\n",
        "      <td>Gerencia De Adquisiciones Y Almacenes</td>\n",
        "      <td>Equipos Y Soldaduras Del Norte Sa De Cv</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>0.140386</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>0.140</td>\n",
        "      <td>Adquisiciones</td>\n",
-       "      <td>0.140386</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -163,10 +168,10 @@
        "      <td>Exportadora De Sal SA De CV</td>\n",
        "      <td>Gerencia De Adquisiciones Y Almacenes</td>\n",
        "      <td>Equipos Y Soldaduras Del Norte Sa De Cv</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>0.245974</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>0.246</td>\n",
        "      <td>Adquisiciones</td>\n",
-       "      <td>0.245974</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -175,10 +180,10 @@
        "      <td>Exportadora De Sal SA De CV</td>\n",
        "      <td>Gerencia De Adquisiciones Y Almacenes</td>\n",
        "      <td>Castro Vega Arturo Jesus</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>0.066000</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>0.066</td>\n",
        "      <td>Adquisiciones</td>\n",
-       "      <td>0.066000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -187,10 +192,10 @@
        "      <td>Exportadora De Sal SA De CV</td>\n",
        "      <td>Gerencia De Adquisiciones Y Almacenes</td>\n",
        "      <td>Lopez Montoya Baldomero Joel</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>0.105000</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>0.105</td>\n",
        "      <td>Servicios</td>\n",
-       "      <td>0.105000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -199,10 +204,10 @@
        "      <td>Exportadora De Sal SA De CV</td>\n",
        "      <td>Gerencia De Adquisiciones Y Almacenes</td>\n",
        "      <td>Lopez Leon Arturo</td>\n",
-       "      <td>direct</td>\n",
-       "      <td>0.073665</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>0.074</td>\n",
        "      <td>Servicios</td>\n",
-       "      <td>0.073665</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -211,29 +216,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                        institucion                                 unidad  \\\n",
+       "                             depend                                 unidad  \\\n",
        "180011  Exportadora De Sal SA De CV  Gerencia De Adquisiciones Y Almacenes   \n",
        "180012  Exportadora De Sal SA De CV  Gerencia De Adquisiciones Y Almacenes   \n",
        "180013  Exportadora De Sal SA De CV  Gerencia De Adquisiciones Y Almacenes   \n",
        "180014  Exportadora De Sal SA De CV  Gerencia De Adquisiciones Y Almacenes   \n",
        "180015  Exportadora De Sal SA De CV  Gerencia De Adquisiciones Y Almacenes   \n",
        "\n",
-       "                                        empresa    tipo     monto  \\\n",
-       "180011  Equipos Y Soldaduras Del Norte Sa De Cv  direct  0.140386   \n",
-       "180012  Equipos Y Soldaduras Del Norte Sa De Cv  direct  0.245974   \n",
-       "180013                 Castro Vega Arturo Jesus  direct  0.066000   \n",
-       "180014             Lopez Montoya Baldomero Joel  direct  0.105000   \n",
-       "180015                        Lopez Leon Arturo  direct  0.073665   \n",
+       "                                         empres    tipo  monto         servic  \\\n",
+       "180011  Equipos Y Soldaduras Del Norte Sa De Cv  Direct  0.140  Adquisiciones   \n",
+       "180012  Equipos Y Soldaduras Del Norte Sa De Cv  Direct  0.246  Adquisiciones   \n",
+       "180013                 Castro Vega Arturo Jesus  Direct  0.066  Adquisiciones   \n",
+       "180014             Lopez Montoya Baldomero Joel  Direct  0.105      Servicios   \n",
+       "180015                        Lopez Leon Arturo  Direct  0.074      Servicios   \n",
        "\n",
-       "             servicio    direct  open  limited  \n",
-       "180011  Adquisiciones  0.140386   NaN      NaN  \n",
-       "180012  Adquisiciones  0.245974   NaN      NaN  \n",
-       "180013  Adquisiciones  0.066000   NaN      NaN  \n",
-       "180014      Servicios  0.105000   NaN      NaN  \n",
-       "180015      Servicios  0.073665   NaN      NaN  "
+       "        direct  open  limited  \n",
+       "180011     NaN   NaN      NaN  \n",
+       "180012     NaN   NaN      NaN  \n",
+       "180013     NaN   NaN      NaN  \n",
+       "180014     NaN   NaN      NaN  \n",
+       "180015     NaN   NaN      NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,19 +246,23 @@
    "source": [
     "df = pd.read_csv('data-raw/2018.csv')\n",
     "print(df.shape)\n",
-    "print(df.columns)\n",
-    "print(df.dtypes)\n",
     "\n",
     "df = df[['dependencia', 'uc' ,'empresa', 'method', 'monto', 'servicio']]\n",
-    "df.columns = ['institucion', 'unidad', 'empresa', 'tipo', 'monto', 'servicio']\n",
+    "df.columns = ['depend', 'unidad', 'empres', 'tipo', 'monto', 'servic']\n",
     "\n",
-    "df['monto'] = df['monto'] / 1000000\n",
+    "for col in df.columns:\n",
+    "    print(col, df[col].dtype, df[col].nunique(), sep='\\t', end='\\t')\n",
+    "    if df[col].dtype==object:\n",
+    "        df[col] = df[col].apply(clean_string)\n",
+    "    print(df[col].nunique())\n",
+    "\n",
+    "df['monto'] = df['monto'].apply(lambda x: round(x/1000000,3))\n",
+    "df['nombre'] = df[['depend', 'unidad']].apply(lambda x: x[0]+' ('+x[1]+')' , axis=1)\n",
+    "\n",
     "for i in ['direct', 'open', 'limited']:\n",
     "    df[i] = df['tipo'].apply(lambda x: 1 if x==i else 0)\n",
     "    df[i] = df[i] * df['monto']\n",
     "    df[i] = df[i].replace(0, np.nan)\n",
-    "for i in ['institucion', 'unidad', 'empresa']: \n",
-    "    df[i] = df[i].apply(clean_string)\n",
     "\n",
     "df.tail()"
    ]
@@ -264,13 +273,6 @@
    "source": [
     "Filtrar"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
