ordenar y mejorar textos

--- a/RC-clean.ipynb
+++ b/RC-clean.ipynb
@@ -4,13 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Red de empresas - Limpieza de los seis años\n",
+    "# Red de empresas - Limpieza por sexenio\n",
     "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
     "\n",
-    "1. Limpieza por sexenio\n",
-    "* Series de tiempo\n",
+    "1. __Limpieza por sexenio__\n",
     "* Colaboraciones en contratos\n",
-    "* Contruccion de redes\n"
+    "* Patrones adjudicación\n",
+    "\n",
+    "\n",
+    "## Construir red a partir de csv\n",
+    "\n",
+    "Podemos ver la base de datos como una red con dos tipos de nodos: empresa / unidad compradora \n",
+    "\n",
+    "Necesitamos\n",
+    "* Empresa\n",
+    "* Unidad compradora\n",
+    "* Dependencia\n",
+    "* Tipo adjudicación\n",
+    "* Monto\n",
+    "* Servicio\n",
+    "\n",
+    "Esta red tiene dos tipos de interacciones con varios atributos\n",
+    "* empresa\n",
+    "* dueño\n",
+    "* dependencia\n",
+    "* unidad\n",
+    "* c_num (número de contratos entre la empresa y unidad)\n",
+    "* c_dir (número de contratos por adjudicación directa)\n",
+    "* c_inv (número de contratos por invitación a tres)\n",
+    "* c_lic (número de contratos por licitación abierta)\n",
+    "* c_ids (lista de IDs de todos los contratos)\n",
+    "* m_tot (suma del importe de todos los contratos)\n",
+    "* m_dir (suma del importe contratos por adjudicación directa)\n",
+    "* m_inv (suma del importe contratos por invitación a tres)\n",
+    "* m_lic (suma del importe contratos por licitación abierta)\n",
+    "* p_dir (porcentaje del monto por adjudicación directa)\n",
+    "* p_inv (porcentaje del monto por invitación a tres)\n",
+    "* p_lic (porcentaje del monto por licitación abierta)\n"
    ]
   },
   {
