--- a/RC-colaboracion.ipynb
+++ b/RC-colaboracion.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Red de empresas - Colaboraciones en contratos\n",
-    "__Mariana Esther Martínez Sánchez__"
+    "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
+    "\n",
+    "1. Limpieza por sexenio\n",
+    "* __Colaboraciones en contratos__\n",
+    "* Patrones adjudicación"
    ]
   },
   {
