analisis de publicidad

--- a/RC-colaboracion.ipynb
+++ b/RC-colaboracion.ipynb
@@ -1189,8 +1189,8 @@
    ],
    "source": [
     "for key in consorcios.keys():\n",
-    "    print(key)\n",
     "    df = red[key]['df_nodes']\n",
+    "    print(key.shape[0])\n",
     "    display(df[df['consorcios']>1].sort_values(['% consorcios','consorcios'], ascending=False).head(n_display))"
    ]
   },
@@ -1770,9 +1770,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
