Correciones de Queletzu

--- a/RC-adjudicacion.ipynb
+++ b/RC-adjudicacion.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "## ¿Cuántos contratos y de que monto se dieron por cada tipo de adjudicación?\n",
-    "\n",
+    "Queremos saber si ha cambiado el patrón de asignación de contratos en cada administración federal, entonces podemos ver en cada barra una comparación de los contratos asignados de manera directa, por concurso a tres y abierta.\n",
     "* Sexenio y Año\n",
     "* Absoluto y normalizado"
    ]
@@ -210,7 +210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Qué monto asigna por tipo de contrato cada institucion?"
+    "## ¿Qué monto asigna por tipo de contrato cada institucion?\n",
+    "\n",
+    "En este punto nos preguntábamos si existen instituciones o dependencias de gobierno que prefieran algun tipo de asignación sobre otra, y notamos que puede depender del tipo de actividad de cada institución."
    ]
   },
   {
@@ -304,7 +306,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Cuántas empresas contrata cada institucion?"
+    "## ¿Cuántas empresas contrata cada institucion?\n",
+    "\n",
+    "En este punto era importante ver si hay algunas empresas que mantengan contratos con una sola institución, ya que podría ser reflejo de relaciones estrechas y talvez poco transparentes. Sin embargo cabe señalar que por la especificidad de las actividades de dichas empresas resulta lógico que trabajen para una institución, por ejemplo: galletas cuétara- diconsa, sería normal que no obtuviera contratos con otras dependencias."
    ]
   },
   {
@@ -345,7 +349,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Qué monto recibe por tipo de adjudicación una empresa? "
+    "## ¿Qué monto recibe por tipo de adjudicación una empresa? \n",
+    "\n",
+    "Nos interesaba evaluar si hay empresas que obtengan contratos principalmente por adjudicación directa, la cual pensamos que se puede prestar fácilmente a tráfico de influencias por la parte asignadora. En este sentido, la administración de Fox fue la que mas asignó contratos obtenidos por concursos abiertos, mientras que las administraciones de Calderón y EPN se apoyaron mas en la dinámica de 'invitación a tres' para asignar la mayor parte de sus contratos. Nos parece que es pertinente revisar si esos concursos se realizaban con empresas que tenían capacidad para competir o si eran partes de los mismos consorcios que las ganadoras de los contratos.\n"
    ]
   },
   {
@@ -439,7 +445,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Para cuántas instituciones trabaja una empresa?"
+    "## ¿Para cuántas instituciones trabaja una empresa?\n",
+    "\n",
+    "En este punto es importante evaluar si hay empresas que trabajan para muchas instituciones, y estas suelen ser las que administran nóminas por medio de vales de despensas."
    ]
   },
   {
@@ -478,7 +486,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Qué empresas reciben un solo gran contrato?"
+    "## ¿Qué empresas reciben un solo gran contrato?\n",
+    "Nos interesaba primero saber si los montos de un sólo contrato siguen una distribución normal. Sin embargo lo que observamos es que \n",
+    "1) la distribución esta sesgada hacia la izquierda, es decir suele haber un contrato con un monto estratosférico en cada administración\n",
+    "2) la administración de Fox tuvo contratos con montos menos desiguales que la admin de Calderon y EPN que presentan un sólo contrato de muy alto monto.\n",
+    "3) las empresas que obtienen este tipo de contratos únicos de grandes montos suelen ser para infraestructura y/o construcción\n",
+    "\n",
+    "Una vez que se da el contrato, como lo distribuye un particular es más dificil de rastrear así que sería pertinente evaluar si los contratos se cumplieron a cabalidad ."
    ]
   },
   {
@@ -556,8 +570,7 @@
    "source": [
     "## Las favoritas\n",
     "\n",
-    "trabajaron para una o dos instituciones\n",
-    "menos del 25% de el monto recibido es por licitacion abierta\n",
+    "Seleccionamos las empresas que rabajaron para una o dos instituciones y menos del 25% de el monto recibido es por licitacion abierta. Estos dos indicadores nos pueden señalar que podrían mantener la preferencia de las instituciones asignadoras.\n",
     "\n"
    ]
   },
@@ -1423,6 +1436,8 @@
    "metadata": {},
    "source": [
     "## Las puede con todas\n",
+    "En este apartado mencionamos las empresas que dan servicio a mas de 50 instituciones, y por lo general vemos servicios del tipo: manejo de nómina, seguros, fotocopiadoras, etc. Nos parece que podrían ser proveedoras de insumos que se usa en muchas dependencias y se tendría que evaluar si es conveniente que una empresa mantenga contratos con tantas instituciones puede generar dinámicas monopólicas ¿? pero eso sería algo a discusión.\n",
+    "\n",
     "* Lista y barras"
    ]
   },
@@ -2228,7 +2243,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El uno porciento"
+    "En esta gráfico de venn se observan las 66 compañías que se mantuvieron dando servicios a muchas instituciones federales en tres administraciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El uno porciento\n",
+    "\n",
+    "En general vemos una desigual distribución del presupuesto en todas las dependencias, ya que vemos una concentración del presupuesto total (de dos años por administración en este análisis) en pocas empresas. \n",
+    "Por ejemplo en la administración  de Fox, vemos que el 1% de las empresas concentran el 58% del monto total de TODOS los contratos asignados en el mismo período.\n",
+    "En la administración de Calderon en el 1% de las empresas está concentrado el 65% y\n",
+    "en la administración de EPN en el 1% de las empresas se concentra el 45%."
    ]
   },
   {
@@ -3088,9 +3115,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
