--- a/RC-empresaspublicidad.ipynb
+++ b/RC-empresaspublicidad.ipynb
@@ -1561,7 +1561,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Cuantas empresas de publicidad estan en las puede con todas?"
+    "## ¿Cuantas empresas de publicidad estan en las puede con todas?\n",
+    "Estas empresas trabajan con contratos de hasta 300 con 85 instituciones en la administración de Fox, lo cual es un signo de concentración de presupuesto en dichas empresas a través de varias instituciones.Este patrón no parece estar tan acentuado para las administraciones de Calderón y EPN, sin embargo tambien se observan dinámicas de concentración de contratos en proveedores como la UNAM con 216 contratos con 50 instituciones en la admin de Calderón, y Milenio diario en la admin de EPN."
    ]
   },
   {
@@ -2498,9 +2499,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
