--- a/RC-colaboracion.ipynb
+++ b/RC-colaboracion.ipynb
@@ -177,9 +177,10 @@
    "source": [
     "## ¿Cuántas empresas han tenido contratos con el gobierno en los tres sexenios?\n",
     "\n",
-    "El número de las empresas que tienen contratos ha crecido con cada administración.\n",
+    "El número de las empresas que tienen contratos ha crecido con cada administración ( o al menos el registro de los contratos ha crecido ).\n",
     "La mayor parte de las empresas trabajan para una sola administración.\n",
-    "Pero hay 6040 empresas que han tenido contratos con las tres administraciones."
+    "Pero hay 6040 empresas que han tenido contratos con las tres administraciones.\n",
+    "Es lógico que se repitan empresas en administraciones contiguas, sin embargo hay algunas que han permanecido por al menos 12 años."
    ]
   },
   {
@@ -214,7 +215,7 @@
     "La mayor parte de los consorios son de cuatro empresas.\n",
     "En general el tamaño de los consorcios en el sexenio de Fox y Calderon es similar.\n",
     "Sin embargo, en el sexenio de EPN, aunque hubo menos consorcios, estos crecieron de tamaño.  \n",
-    "En ese sexenio hubo trece consorcios de mas de cién empresas, llegando a haber un consorcio de 1910 empresas"
+    "En ese sexenio hubo trece consorcios de mas de cién empresas, llegando a haber un consorcio de 1910 empresas.\n"
    ]
   },
   {
@@ -332,7 +333,9 @@
    "source": [
     "## ¿Qué empresas participan mas en consorcios?\n",
     "\n",
-    "Existe un grupo de empresas de productos médicos que participan en un gran número de consorcios durante las tres administraciones"
+    "Existe un grupo de empresas de productos médicos que participan en un gran número de consorcios durante las tres administraciones.\n",
+    "En este punto cabría evaluar si dichas empresas cumplen funciones distintas. Léase fabricación, empaquetamiento y distribución de insumos médicos y si requieren asociarse para entregar un producto requerido por las instancias públicas. Por otro lado, es conocido el fuerte 'control' que tienen de los productos y sería pertinente preguntar si han caído en prácticas monopólicas. Ver https://www.sinembargo.mx/20-02-2019/3539577 \"En el caso de los permisos de almacenes y depósitos “para distribuir medicamentos y productos biológicos”, la Cofepris tiene registradas a 594 compañías, de las cuales, el 1.3 por ciento (ocho de 594) concentra el nueve por ciento (74 de 856) de las licencias vigentes (sin considerar a 98 almacenes de los gobiernos estatales).\"\n",
+    "Parece que hay una asociación de las mismas para lograr concentrar la mayor cantidad y/o monto de los contratos en un sólo consorcio."
    ]
   },
   {
@@ -1770,9 +1773,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
