--- a/RC-estandarizarpublicidad.ipynb
+++ b/RC-estandarizarpublicidad.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Estandarizar los datos de la base de publicidad y QuienEsQuien\n",
-    "## NO corras este notebook excepto que quieras que se tarde una eternidad!\n"
+    "## NO corras este notebook excepto que quieras que se tarde una eternidad!\n",
+    "\n",
+    "Generar un diccionario de beneficiarios de los contratos de publicidad a partir de la base de Comunicación Social de la base completa de  http://publicidadoficial.com.mx/ .\n",
+    "Utilizamos fuzzy wuzzy para estandarizar los nombres y así poder matchear los contratos con una sola entidad cuando se trate de la misma. \n"
    ]
   },
   {
@@ -6427,7 +6430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
