trabaje en textos y formato

--- a/RC2-colaboracion.ipynb
+++ b/RC2-colaboracion.ipynb
@@ -4,25 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Red de empresas - Colaboraciones en contratos\n",
+    "# Publiton 2019 - Red de empresas y dependencias\n",
+    "## 2. Colaboraciones en contratos\n",
     "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
     "\n",
     "1. Limpieza por sexenio\n",
-    "* __Colaboraciones en contratos__\n",
-    "* Patrones adjudicación"
+    "2. __Colaboraciones en contratos__\n",
+    "3. Patrones adjudicación\n",
+    "4. Empresas de publicidad"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cargar datos"
+    "Las empresas no siempre compiten entre ellas por los contratos, a veces dos o mas empresas forman un __consorcio__ para hacerle una oferta a una unidad compradora de una dependencia gubernamental. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -41,7 +47,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -75,14 +85,18 @@
    "source": [
     "## ¿Cuántos contratos se dieron a empresas o consorcios?\n",
     "\n",
-    "El sexenio donde se dieron mas contratos fue el de Caldreon, seguido por EPN y FOX.\n",
-    "En el sexenio de Fox se dió el 26% de los contratos a consorcios"
+    "El sexenio donde se dió el mayor número de contratos y el mayor monto fue el de Caldreon, seguido por EPN y Fox. Sin embargo, estos datos podrían cambiar conforme se actualizen las bases de datos.\n",
+    "En el sexenio de Fox se dió el 26% de los contratos a consorcios, mientras que en el de Calderon y EPN solo se dieron el 5% de contratos a estos consorcios."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -186,7 +200,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -214,14 +232,18 @@
     "\n",
     "La mayor parte de los consorios son de cuatro empresas.\n",
     "En general el tamaño de los consorcios en el sexenio de Fox y Calderon es similar.\n",
-    "Sin embargo, en el sexenio de EPN, aunque hubo menos consorcios, estos crecieron de tamaño.  \n",
+    "Sin embargo, en el sexenio de EPN, aunque hubo menos consorcios, estos crecieron de tamaño. \n",
     "En ese sexenio hubo trece consorcios de mas de cién empresas, llegando a haber un consorcio de 1910 empresas.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -301,7 +323,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -341,7 +367,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def crear_red(data):\n",
@@ -373,7 +403,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -406,7 +440,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -806,7 +844,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1207,7 +1249,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1602,13 +1648,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ¿Cuál es el tamaño de los grupos de colaboración?"
+    "## ¿Cuál es el tamaño de los grupos de colaboración?\n",
+    "\n",
+    "El participar juntos en un contrato significa que hay, al menos temporalmente, una colaboración entre dos empresas. Sin embargo, esto no significa que las empresas vayan siempre juntas, puede haber grupos de empresas que colaboren entre ellas frecuentemente para competir en contratos guvernamentales. De esta manera podemos construir una red de colaboración, la cuál nos permite ver cuantas empresas colaboran y que tan frecuentemente. \n",
+    "\n",
+    "La mayor parte de las empresas colaboran con 3 o 4 empresas, y el tamaño de estos grupos de colaboración han crecido con el tiempo. En el sexenio de Calderón hubo dos mil grupos de colaboración, mientras que en el de Fox y EPN hubo alrededor de mil doscientos. En todos los sexenios hubo un grupo de colaboracipon despropocionalmente grande. En el sexenio de Fox este grupo fue de casi 24 mil empresas que colaboraron de manera directa o indirecta entre todas, mientras que en el de calderon y EPN fue de alrededor de 14 mil empresas.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1666,13 +1720,17 @@
    "source": [
     "## ¿Cuales son los grupos que mas colaboran?\n",
     "\n",
-    "Gráficamos el grupo de empresas mas grande que comparte minímo 150 colaboraciones entre ellas"
+    "Dentro de este gran grupo de colaboración hay empresas que colaboran con gran intensidad. Si gráficamos las empresas que colaboraron en mas 150 contratos podemos ver que destacan las empresas asociadas a los medicamentos, las cuales agrupan una gran cantidad de contratos y colaboran repetidamente entre ellas. Estas empresas han logrado mantener sus redes de colaboración a lo largo de los sexenios."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1773,9 +1831,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
