--- a/RC1-clean.ipynb
+++ b/RC1-clean.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Red de empresas - Limpieza por sexenio\n",
+    "# Publiton 2019 - Red de empresas y dependencias\n",
+    "## 1. Limpieza por sexenio\n",
     "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
     "\n",
-    "1. __Limpieza por sexenio__\n",
-    "* Colaboraciones en contratos\n",
-    "* Patrones adjudicación\n",
-    "\n",
-    "\n",
+    "1. Limpieza por sexenio\n",
+    "    * __Limpieza de datos de los dos últimos años de cada sezenio de [QuienEsQuien](https://www.quienesquien.wiki/)__\n",
+    "    * Estandarización de la base completa de publicidad del sexenio de EPN [Comunicación Social](http://publicidadoficial.com.mx/)\n",
+    "2. Colaboraciones en contratos\n",
+    "3. Patrones adjudicación\n",
+    "4. Empresas de publicidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Construir red a partir de csv\n",
     "\n",
     "Podemos ver la base de datos como una red con dos tipos de nodos: empresa / unidad compradora \n",
@@ -40,13 +48,17 @@
     "* m_lic (suma del importe contratos por licitación abierta)\n",
     "* p_dir (porcentaje del monto por adjudicación directa)\n",
     "* p_inv (porcentaje del monto por invitación a tres)\n",
-    "* p_lic (porcentaje del monto por licitación abierta)\n"
+    "* p_lic (porcentaje del monto por licitación abierta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -61,7 +73,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def limpiar_df(df,nom):\n",
@@ -133,7 +149,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -203,9 +223,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
