--- a/RC1-estandarizarpublicidad.ipynb
+++ b/RC1-estandarizarpublicidad.ipynb
@@ -4,11 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estandarizar los datos de la base de publicidad y QuienEsQuien\n",
-    "## NO corras este notebook excepto que quieras que se tarde una eternidad!\n",
+    "# Publiton 2019 - Red de empresas y dependencias\n",
+    "## 1. Limpieza por sexenio\n",
+    "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
+    "\n",
+    "1. Limpieza por sexenio\n",
+    "    * Limpieza de datos de los dos últimos años de cada sezenio de [QuienEsQuien](https://www.quienesquien.wiki/)__\n",
+    "    * __Estandarización de la base completa de publicidad del sexenio de EPN [Comunicación Social]__(http://publicidadoficial.com.mx/)\n",
+    "2. Colaboraciones en contratos\n",
+    "3. Patrones adjudicación\n",
+    "4. Empresas de publicidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estandarizar los datos de la base de Comunicación Social y QuienEsQuien\n",
+    "__! NO corras este notebook excepto que quieras que se tarde una eternidad!__\n",
     "\n",
     "Generar un diccionario de beneficiarios de los contratos de publicidad a partir de la base de Comunicación Social de la base completa de  http://publicidadoficial.com.mx/ .\n",
-    "Utilizamos fuzzy wuzzy para estandarizar los nombres y así poder matchear los contratos con una sola entidad cuando se trate de la misma. \n"
+    "Utilizamos fuzzy wuzzy para estandarizar los nombres y así poder matchear los contratos con una sola entidad cuando se trate de la misma. "
    ]
   },
   {
@@ -6430,9 +6446,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
