--- a/RC4-empresaspublicidad.ipynb
+++ b/RC4-empresaspublicidad.ipynb
@@ -4,19 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Red de empresas - Contratos de publicidad \n",
+    "# Publiton 2019 - Red de empresas y dependencias\n",
+    "## 4. Empresas de publicidad\n",
     "__Queletzú Paulina Aspra Polo y Mariana Esther Martínez Sánchez__\n",
     "\n",
     "1. Limpieza por sexenio\n",
-    "* Colaboraciones en contratos\n",
-    "* __Patrones adjudicación__\n",
-    "* Contratos de publicidad \n"
+    "2. Colaboraciones en contratos\n",
+    "3. Patrones adjudicación\n",
+    "4. __Empresas de publicidad__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -27,7 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -49,7 +58,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "sexenios = ['FOX','CAL','EPN']\n",
@@ -67,7 +80,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1562,13 +1579,19 @@
    "metadata": {},
    "source": [
     "## ¿Cuantas empresas de publicidad estan en las puede con todas?\n",
-    "Estas empresas trabajan con contratos de hasta 300 con 85 instituciones en la administración de Fox, lo cual es un signo de concentración de presupuesto en dichas empresas a través de varias instituciones.Este patrón no parece estar tan acentuado para las administraciones de Calderón y EPN, sin embargo tambien se observan dinámicas de concentración de contratos en proveedores como la UNAM con 216 contratos con 50 instituciones en la admin de Calderón, y Milenio diario en la admin de EPN."
+    "Estas empresas trabajan con contratos de hasta 300 con 85 instituciones en la administración de Fox, lo cual es un signo de concentración de presupuesto en dichas empresas a través de varias instituciones.Este patrón no parece estar tan acentuado para las administraciones de Calderón y EPN, sin embargo tambien se observan dinámicas de concentración de contratos en proveedores como la UNAM con 216 contratos con 50 instituciones en la admin de Calderón, y Milenio diario en la admin de EPN.\n",
+    "\n",
+    "Cabe destacar, que aunque el comportamiento de las favoritas en el ramo de publicidad se mantuvo igual en los tres sexenios, durante el sexenio de EPN el número de empresas \"puede con todas\" en materia de publicidad se duplico. Dada la gran cantidad de contratos y montos asignados a estas empresas, esto muestra que las empresas de publicidad fueron favorecidas de manera destacable durante el sexenio de EPN a nivel federal."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2481,6 +2504,11 @@
     "    print('\\tPuede con todas {} de {} ({}%)'.format(m,t,round(m*100/t,3)))\n",
     "    display(sel.head(25))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -2499,9 +2527,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
