correciones multiples de redaccion

--- a/RC3-adjudicacion.ipynb
+++ b/RC3-adjudicacion.ipynb
@@ -18,6 +18,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "Existen dos tipos de empresas:\n",
+    "\n",
+    "* Las “puede con todas” que tienen contratos con muchas dependencias por “licitación abierta”. Las “puede con todas” son expertas en licitaciones, pueden facturar muchos contratos de gran monto.\n",
+    "\n",
+    "<img src=\"figures/RC-puedecontodas.png\">\n",
+    "\n",
+    "* Las “favoritas” que tienen contratos con menos de tres dependencias por “adjudicación directa” o “invitación a tres” Las “favoritas” pueden facturar relativamente poco dinero (menos de 10 millones) pero son sospechosas de tráfico de influencias con una entidad en particular\n",
+    "\n",
+    "<img src=\"figures/RC-lafavorita.png\">\n",
+    "\n",
     "* ¿Cuántos contratos y de que monto se dieron por cada tipo de adjudicación?\n",
     "    * Sexenio y Año\n",
     "    * Absoluto y normalizado\n",
